# django_visual_admin

./: .gitignore  manage.py  setup.cfg
admin3/templates/admin/: change_form.html  index.html
admin3/templates/admin/edit_inline/: tabular.html
custom_admin/: __init__.py  actions.py  admin.py  apps.py  checks.py  filters.py  helpers.py  models.py  options.py  sites.py  utils.py  widgets.py
custom_admin/static/custom_admin/css/: custom.css
custom_admin/templates/custom_admin/: actions.html  app_index.html  base.html  base_site.html  change_form.html  change_form_object_tools.html  change_list.html  change_list_object_tools.html  change_list_results.html  delete_confirmation.html  delete_selected_confirmation.html  index.html  object_history.html  submit_line.html
custom_admin/templates/custom_admin/edit_inline/: stacked.html  tabular.html
custom_admin/templatetags/: admin_static.py  admin_urls.py  base.py  custom_admin_link.py  custom_admin_list.py  custom_admin_modify.py  custom_admin_urls.py
custom_admin/views/: main.py
django_visual_admin/: admin.py  settings.py  urls.py  wsgi.py
templates/: foto.html  nofoto.html  printtool.html
templates/admin/: base.html
test_project/ingredients/: admin.py  models.py
test_project/ingredients/migrations/: 0001_initial.py  0002_alter_ingredient_id.py
test_project/recipes/: admin.py  models.py
test_project/recipes/migrations/: 0001_initial.py  0002_rename_time_recipe_number_alter_recipe_id.py  0003_recipe_created_recipe_picture_recipe_updated_date_and_more.py
(+5 files in other folders)
