[metadata]
name = Django Visual Admoin
version = 0.0.1
author = Pablo Burgos
author_email = hispar@gmail.com
description = A package implementing a visual django admin
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Hispar/django_visual_admin
project_urls =
    Bug Tracker = https://github.com/Hispar/django_visual_admin/issues
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    django
    django-extensions

[options.extras_require]
test = pytest; coverage

[options.packages.find]
where = src